			SWI-Prolog ChangeLog
			====================

  * ADDED: -s file to load a script-file in addition to the user
    initialisation file.

  * ADDED: -q commandline option to make the system operate silently.

  * ADDED: PrologScript support using #!, providing direct scripting
    in Unix and additional parameters on MS-Windows.

  * FIXED: Wipe the anonymous clauses for meta-calling on $dcall/1 as
    soon as possible.  Reported by Stefan Mueller.

  * ADDED: Save home in saved-state for class development and kernel.  This
    enables saved-states to find the installed SWI-Prolog.  Especially
    useful for Windows.

  * ADDED: Save default stack limits in the Windows registry and add a
    menu item to the manpce/0 File/Edit Preferences menu to manage these
    registry settings.


VERSION 4.0.4
=============

  * FIXED: Problem in GUI tracer tracing predicates loaded from ?- [user].

  * MODIFIED: The file-reading predicates (consult, use_module, load_files,
    etc.) no longer change current input to the file loaded.  This implies
    that read/1 and friends read from the current input before the load
    predicate was started rather then the file we are loading from.

  * FIXED: Setting break-points on facts, or in general on the last
    (I_EXIT or I_EXITFACT) instruction of a clause.

VERSION 4.0.3
=============

  * ADDED: New hooking system for help/0, help/1 and apropos/1.

  * FIXED: Allow for -f "c:\..." in Windows.

  * ENHANCED: Moved boot/listing.pl to the library, reducing the
    footprint and startup time.  Also modernised the code a bit,
    allow for hooks, so listing(class->method) lists an XPCE method
    and allow for partial listing: listing(foo(a, _)) to get only
    the clauses for which a unifies to the first argument.

  * FIXED: tracer not to trap cut-port in system predicates (GUI).

  * FIXED: Atom-GC problem: global options structured used pointers
    to string of unlocked atoms.
